attempt to fix DT-2342, V8 - Architect - Folder page text alignment.

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -386,7 +386,8 @@
         }
         .navigation-list--children {
             .navigation-item:first-child .item-name,
-            .navigation-item:last-child .item-name {
+            .navigation-item:last-child .item-name,
+            .navigation-item {
                 padding: 7px 14px;
             }
         }
